xyzxyz (this is from a tweet)

--- a/dotfiles/.config/anyrun/style.css
+++ b/dotfiles/.config/anyrun/style.css
@@ -9,7 +9,8 @@
 
 * {
   all: unset;
-  font-family: JetBrainsMono Nerd Font;
+  /* font-family: JetBrainsMono Nerd Font; */
+  font-family: 'FiraCode Nerd Font';
 }
 
 #window {
